[gd_scene load_steps=8 format=3 uid="uid://j0yw0w2611lj"]

[ext_resource type="Script" path="res://main.gd" id="1_bjyth"]
[ext_resource type="PackedScene" uid="uid://bifyngktaiiqf" path="res://characters/food.tscn" id="2_6gcij"]
[ext_resource type="Resource" uid="uid://bwkivs2o6mkkq" path="res://resources/game_state.tres" id="3_7i0j8"]
[ext_resource type="PackedScene" uid="uid://un50tj06argm" path="res://background/background.tscn" id="3_j7acc"]
[ext_resource type="PackedScene" uid="uid://ckbuxkupire1y" path="res://hud/hud.tscn" id="4_8jn6c"]
[ext_resource type="AudioStream" uid="uid://bi0llkqfpnyj3" path="res://assets/synthwave.mp3" id="5_n08ix"]
[ext_resource type="PackedScene" uid="uid://b8jnerralx53t" path="res://characters/player.tscn" id="7_b6obr"]

[node name="main" type="Node2D"]
script = ExtResource("1_bjyth")
food_scene = ExtResource("2_6gcij")
game_state = ExtResource("3_7i0j8")

[node name="Background" parent="." instance=ExtResource("3_j7acc")]

[node name="Player" parent="." instance=ExtResource("7_b6obr")]
position = Vector2(64, 128)

[node name="FoodSpawnTimer" type="Timer" parent="."]

[node name="DownSpawn" type="Node2D" parent="."]
position = Vector2(352, 128)

[node name="UpSpawn" type="Node2D" parent="."]
position = Vector2(352, 96)

[node name="HUD" parent="." instance=ExtResource("4_8jn6c")]
game_state = ExtResource("3_7i0j8")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_n08ix")
autoplay = true

[connection signal="timeout" from="FoodSpawnTimer" to="." method="_on_food_spawn_timeout"]
